--- a/src/app/pages/cecy/courses/assignment/assignment.component.html
+++ b/src/app/pages/cecy/courses/assignment/assignment.component.html
@@ -54,7 +54,7 @@
     
     <p-dialog
       [(visible)]="showDialog"
-      [style]="{width: '700px'}"
+      [style]="{width: '500px'}"
       header="Asignación de tutor"
       [modal]="true"
       styleClass="p-fluid"
@@ -64,7 +64,6 @@
       <div class="p-field">
         <label for="needs">Planificación</label>
         <input
-          id="planification_id"
           [(ngModel)]="planificationSelected.planification_id"
           rows="1"
           pInputText
@@ -73,47 +72,17 @@
           autoResize="autoResize"
         />
       </div>
-      <div class="p-field">
+      <div class="p-field" style="margin-bottom: 80px;">
         <label for="needs">Instructor</label>
         <p-autoComplete
-            [value]="id"
             [(ngModel)]="planificationSelected.instructor_id"
             [suggestions]="filteredUsers"
             (completeMethod)="searchTeacher($event)"
             [dropdown]="true"
-            field="full_name" 
+            field="full_name"
           >
         </p-autoComplete>
       </div>
-      <!-- <div class="p-field">
-        <p-table 
-          [value]="products"
-          [(ngModel)]="planification_instructors"
-        >
-          <ng-template pTemplate="header">
-              <tr>
-                  <th>Id</th>
-                  <th>Nombre</th>
-                  <th>Opciones</th>
-              </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-product>
-              <tr>
-                  <td>dsdsd</td>
-                  <td>dsdsdd</td>
-                  <td>
-                    <button
-                    pButton
-                    pRipple
-                    icon="pi pi-trash"
-                    class="p-button-rounded p-button-warning"
-                  >
-                  </button>
-                </td>
-              </tr>
-          </ng-template>
-      </p-table>
-      </div> -->
   </ng-template>
 
   <ng-template pTemplate="footer">
