--- a/src/app/pages/job-board/company/profile/profile-form/profile-form.component.html
+++ b/src/app/pages/job-board/company/profile/profile-form/profile-form.component.html
@@ -45,16 +45,10 @@
                   <i *ngIf="phoneField.invalid && (phoneField.touched || phoneField.dirty)"
                     class="pi pi-times-circle icon-invalid"></i>
                 </label>
-                <input id="phone" formControlName="phone" pInputText>
+                <p-inputMask id="phone" mask="0999999999" formControlName="phone"></p-inputMask>
                 <div *ngIf="phoneField.errors && (phoneField.touched || phoneField.dirty)">
                   <small *ngIf="phoneField.errors?.required" id="phone-help-1" class="p-error">
                     {{messageService.fieldRequired}}
-                  </small>
-                  <small *ngIf="phoneField.errors?.minlength" id="phone-help-2" class="p-error">
-                    {{messageService.fieldMinLength(phoneField)}}
-                  </small>
-                  <small *ngIf="phoneField.errors?.maxlength" id="phone-help-3" class="p-error">
-                    {{messageService.fieldMaxLength(phoneField)}}
                   </small>
                 </div>
               </div>
