curriculum casi ok

--- a/src/app/pages/job-board/professional/professional.component.html
+++ b/src/app/pages/job-board/professional/professional.component.html
@@ -21,7 +21,7 @@
             <app-reference *ngIf="selectedTab===5"></app-reference>
         </p-tabPanel>
         <p-tabPanel header="Curriculum" leftIcon="pi pi-book" tooltip="">
-            <app-curriculum *ngIf="selectedTab===6" [getPrueba]="prueba1"></app-curriculum>
+            <app-curriculum *ngIf="selectedTab===6" ></app-curriculum>
         </p-tabPanel>
     </p-tabView>
 </div>
