--- a/src/app/pages/job-board/professional/curriculum/curriculum.component.html
+++ b/src/app/pages/job-board/professional/curriculum/curriculum.component.html
@@ -1,9 +1,6 @@
 <div class="p-grid">
         <div class="p-col-12">
-
-                <app-course></app-course>
-
-
+                <app-curriculum-list></app-curriculum-list>
         </div>
 
 </div>
