fix bugs company

--- a/src/app/pages/job-board/company/register/register-form/register-form.component.html
+++ b/src/app/pages/job-board/company/register/register-form/register-form.component.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="p-field p-xl-6 p-lg-6 p-md-12 p-sm-12">
                   <label for="identification">
-                    <i class="p-error">*</i> Identificación:
+                    <i class="p-error">*</i> Número de documento:
                     <i *ngIf="identificationField.valid" class="pi pi-check-circle icon-valid"></i>
                     <i *ngIf="identificationField.invalid && (identificationField.touched || identificationField.dirty)"
                       class="pi pi-times-circle icon-invalid"></i>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                   <label for="identification_type">
-                    <i class="p-error">*</i> Tipo de Identificación:
+                    <i class="p-error">*</i> Tipo de documento:
                     <i *ngIf="identificationTypeField.valid" class="pi pi-check-circle icon-valid"></i>
                     <i *ngIf="identificationTypeField.invalid && (identificationTypeField.touched || identificationTypeField.dirty)"
                       class="pi pi-times-circle icon-invalid"></i>
