--- a/src/app/pages/shared/components/skeleton/skeleton.component.html
+++ b/src/app/pages/shared/components/skeleton/skeleton.component.html
@@ -1,5 +1,13 @@
 <div class="card">
     <div class="p-grid p-formgrid">
+        <div class="p-field p-col-12 p-md-6" *ngIf="type==='form'">
+            <p-skeleton styleClass="p-mb-2"></p-skeleton>
+            <p-skeleton width="10rem" styleClass="p-mb-2"></p-skeleton>
+            <p-skeleton width="5rem" styleClass="p-mb-2"></p-skeleton>
+            <p-skeleton height="2rem" styleClass="p-mb-2"></p-skeleton>
+            <p-skeleton width="10rem" height="4rem"></p-skeleton>
+        </div>
+
         <div class="p-field p-col-12 p-md-6" *ngIf="type==='rectangle'">
             <p-skeleton styleClass="p-mb-2"></p-skeleton>
             <p-skeleton width="10rem" styleClass="p-mb-2"></p-skeleton>
