--- a/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
+++ b/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
@@ -7,7 +7,7 @@
                         <div class="p-formgrid p-grid">
                             <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                                 <label for="identification">
-                                    <i class="p-error">*</i>Identificación:
+                                    <i class="p-error">*</i>Número de documento:
                                     <i *ngIf="identificationField.valid" class="pi pi-check-circle icon-valid"></i>
                                     <i *ngIf="identificationField.invalid && (identificationField.touched || identificationField.dirty)"
                                         class="pi pi-times-circle icon-invalid"></i>
