--- a/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
+++ b/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
@@ -109,7 +109,7 @@
                                     </small> -->
                                 </div>
                             </div>
-                        </div>
+                       
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="gender">
                               <i class="p-error">*</i> Genero:
@@ -152,7 +152,8 @@
                                         </div>
                                     </ng-template>
                                 </p-dropdown>
-                            </div>                 
+                            </div> 
+                        </div>                
                         <div class="p-field">
                             <label for="birthdate">
                                 <i class="p-error">*</i> Fecha de Nacimiento:
@@ -258,7 +259,7 @@
                     <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isFamiliarDisability">
-                                <i class="p-error">*</i> Familiar con Discapacidad:
+                                <i class="p-error">*</i>¿Tiene Familiar con Discapacidad ?:
                                 <i *ngIf="isFamiliarDisabilityField.valid" class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isFamiliarDisabilityField.invalid && (isFamiliarDisabilityField.touched || isFamiliarDisabilityField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
