--- a/src/app/pages/job-board/professional/curriculum/curriculum-list/curriculum-list.component.html
+++ b/src/app/pages/job-board/professional/curriculum/curriculum-list/curriculum-list.component.html
@@ -24,6 +24,7 @@
         </tr>
     </table>
 </div>
+<p-card >
 <div class="title">
     <h2>HABILIDADES</h2>
 </div>
@@ -39,6 +40,7 @@
         </tr>
     </table>
 </div>
+</p-card>
 <div class="title">
     <h2>CURSOS Y CAPACITACIONES</h2>
 </div>
