--- a/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
+++ b/src/app/pages/job-board/professional/profile/profile-form/profile-form.component.html
@@ -7,7 +7,7 @@
                         <div class="p-formgrid p-grid">
                             <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                                 <label for="identification">
-                                    <i class="p-error">*</i>Número de documento:
+                                    <i class="p-error">*</i>Identificación:
                                     <i *ngIf="identificationField.valid" class="pi pi-check-circle icon-valid"></i>
                                     <i *ngIf="identificationField.invalid && (identificationField.touched || identificationField.dirty)"
                                         class="pi pi-times-circle icon-invalid"></i>
@@ -109,7 +109,9 @@
                                     </small> -->
                                 </div>
                             </div>
-                       
+                        </div>
+                        
+                        <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="gender">
                               <i class="p-error">*</i> Genero:
@@ -152,8 +154,8 @@
                                         </div>
                                     </ng-template>
                                 </p-dropdown>
-                            </div> 
-                        </div>                
+                            </div>
+                        </div>         
                         <div class="p-field">
                             <label for="birthdate">
                                 <i class="p-error">*</i> Fecha de Nacimiento:
@@ -169,14 +171,15 @@
                                 </small>
                             </div>
                         </div>
-                      
-                      
                     </p-card>
-                    <div class="p-field">
-                        <app-location-address [option]="1" (formAddressOut)="formAddress=$event"
+                    <br>
+                    <p-card header="Ubicación:">
+                        <div class="p-field">
+                            <app-location-address [option]="1" (formAddressOut)="formAddress=$event"
                             (formLocationOut)="setFormLocation($event)" id="address" formControlName="address">
                         </app-location-address>
-                    </div>
+                        </div>
+                    </p-card>
                 </div>
             </div>
             <div class="p-field p-xl-6 p-lg-6 p-md-12 p-sm-12">
@@ -201,7 +204,7 @@
                     <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isTravel">
-                                <i class="p-error">*</i>Esta trabajando:
+                                <i class="p-error">*</i>¿ Se encuentra trabajando?:
                                 <i *ngIf="isTravelField.valid" class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isTravelField.invalid && (isTravelField.touched || isTravelField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
@@ -221,7 +224,7 @@
                     <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isDisability">
-                                <i class="p-error">*</i>Es Discapacitado:
+                                <i class="p-error">*</i>¿ Tiene alguna discapacidad?:
                                 <i *ngIf="isDisabilityField.valid" class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isDisabilityField.invalid && (isDisabilityField.touched || isDisabilityField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
@@ -239,7 +242,7 @@
                         </div>
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isCatastrophicIllness">
-                                <i class="p-error">*</i> Tiene Enfermedad Catastrófica:
+                                <i class="p-error">*</i>¿ Tiene Alguna Enfermedad Catastrófica?:
                                 <i *ngIf="isCatastrophicIllnessField.valid" class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isCatastrophicIllnessField.invalid && (isCatastrophicIllnessField.touched || isCatastrophicIllnessField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
@@ -259,7 +262,7 @@
                     <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isFamiliarDisability">
-                                <i class="p-error">*</i>¿Tiene Familiar con Discapacidad ?:
+                                <i class="p-error">*</i>¿ Tiene Algun Familiar con Discapacidad?:
                                 <i *ngIf="isFamiliarDisabilityField.valid" class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isFamiliarDisabilityField.invalid && (isFamiliarDisabilityField.touched || isFamiliarDisabilityField.dirty)"
                                     class="pi pi-times-circle icon-invalid"></i>
@@ -297,7 +300,7 @@
                     <div class="p-formgrid p-grid">
                         <div class="p-field p-xl-6 p-lg-6 p-md-6 p-sm-12">
                             <label for="isFamiliarCatastrophicIllness">
-                                <i class="p-error">*</i> Su Familiar Tiene Enfermedad Catastrófica:
+                                <i class="p-error">*</i>¿ Tiene Algun Familiar con Enfermedad Catastrófica?:
                                 <i *ngIf="isFamiliarCatastrophicIllnessField.valid"
                                     class="pi pi-check-circle icon-valid"></i>
                                 <i *ngIf="isFamiliarCatastrophicIllnessField.invalid && (isFamiliarCatastrophicIllnessField.touched || isFamiliarCatastrophicIllnessField.dirty)"
